--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ dotenv = "0.15.0"
 screenshots = "0.8.10"
 image = "0.25.6"
 base64 = "0.22.1"
+reqwest = { version = "0.12", features = ["json"] }
 winreg = { version = "0.52", optional = true }
 windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"], optional = true }
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
